# Suggestly

./: .gitignore  Games Recom.ipynb  README.md  app.js  app.py  book.ipynb  book_jupyter.ipynb  book_recommendation.py  game_jupyter.ipynb  game_recommendation.py  games_recommendation.py  movie_Recom.ipynb  movie_jupyter.ipynb  movie_recommendation.py  music.ipynb  music_jupyter.ipynb  music_recommendation.py  pyproject.toml  recommendation.py
.ipynb_checkpoints/: book-checkpoint.ipynb
static/: style.css  style_book.css  styles.css
templates/: index.html  index_book.html  index_music.html  try.html
vscode/: settings.json  tasks.json
