[project]
name = "recommendationsys"
version = "0.1.0"
description = ""
authors = [
    {name = "h-monishraj-1",email = "h.monishraj.official@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
